force-app/main/default/objects/Brand__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Huawie</fullName>
            </value>
            <value>
                <fullName>Xiaomi</fullName>
            </value>
            <value>
                <fullName>Vivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>