force-app/main/default/objects/Brand__c/fields/Coupon_Item__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Item__c</fullName>
    <label>Coupon Item</label>
    <referenceTo>Coupon_Item__c</referenceTo>
    <relationshipLabel>Categorization</relationshipLabel>
    <relationshipName>Brands</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>