force-app/main/default/objects/Brand__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Brands</relationshipLabel>
    <relationshipName>Brands</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>